Upgrade version number to 3.6.2

--- a/notes.html
+++ b/notes.html
@@ -108,9 +108,15 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.6.1</h2>
+<h2 id="toc_1">3.6.2</h2>
 
-<h3 id="toc_2">A bug fix plus some subtle improvements or modernizations</h3>
+<h4 id="toc_2">Bugfix</h4>
+
+<ul>
+<li>Fix main window not appearing when &quot;checking for new articles&quot; preference is set to &quot;Manually&quot; </li>
+</ul>
+
+<h2 id="toc_3">3.6.1</h2>
 
 <ul>
 <li>Fix brutal resizing of article view column in vertical layout</li>
