--- a/notes.html
+++ b/notes.html
@@ -108,23 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.7.0</h2>
+<h2 id="toc_1">3.7.1</h2>
 
 <ul>
-<li>Update database to enable auto-vacuum mode (the updated database remains compatible with older versions of Vienna)</li>
-<li>Add dark color scheme to Default and Serifim styles</li>
-<li>Fix search field for some macOS versions prior to macOS 11</li>
-<li>Fix database update on permanent HTTP redirections</li>
-<li>Fix a problem with some authentication challenges sent by servers</li>
-<li>Limit duration of requests to unresponding websites</li>
-<li>Modify symbols displayed in article list on macOS 11 Big Sur</li>
-<li>Update some localizations</li>
-<li>Update an URL in the default set of feeds</li>
-<li>Various code modernizations</li>
-<li>More coherent project settings</li>
-<li>Rearrange some files ; move images into a single Assets.xcassets folder</li>
-<li>Build with Xcode 12.3</li>
-<li>Improve SwiftLint settings</li>
+<li>Improve autodiscovery of feeds inside webpages (among other improvements, detect URLs of feeds for YouTube channels or users)</li>
+<li>Fix wrong image used in article list to indicate existence of an enclosure</li>
+<li>Fix empty folders in build which interferes with plug-in loading</li>
 </ul>
 
 
