Revert "Upgrade version number to 3.6.0"
This reverts commit 51eb05dc512f8891ecabc662f422eb791c14934a.

--- a/notes.html
+++ b/notes.html
@@ -108,20 +108,45 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.6.0</h2>
-
-<h3 id="toc_2">! 3.6 versions require OS X 10.11 (El Capitan) or later !</h3>
+<h2 id="toc_1">3.6.0 Beta 5</h2>
 
 <ul>
-<li>Universal build (support Apple Silicon processors as well as Intel processors) through Xcode 12.2</li>
-<li>Revamp Preferences window (use Storyboard implementation)</li>
-<li>Modernize code:
+<li>Silence some warnings</li>
+<li>Remove unused code</li>
+<li>Add GitHub workflow for testing</li>
+</ul>
+
+<h2 id="toc_2">3.6.0 Beta 4</h2>
 
 <ul>
-<li>remove deprecated methods</li>
-<li>improve coexistence of Swift and Objective-C</li>
-<li>improve development workflows</li>
-</ul></li>
+<li>Update to Xcode 12</li>
+</ul>
+
+<h2 id="toc_3">3.6.0 Beta 3</h2>
+
+<ul>
+<li>Configure Github configuration to close abandoned issues</li>
+</ul>
+
+<h2 id="toc_4">3.6.0 Beta 2</h2>
+
+<ul>
+<li>Replace deprecated methods</li>
+</ul>
+
+<h2 id="toc_5">3.6.0 Beta 1</h2>
+
+<ul>
+<li>Lift deployment target to macOS 10.11 &amp; start modernizing code</li>
+<li>Replaced MASPreferences with Storyboard implementation (Preferences window)</li>
+</ul>
+
+<h2 id="toc_6">3.5.10</h2>
+
+<ul>
+<li>Fix application crashing on display of certain URLs (bug introduced by version 3.5.9) </li>
+<li>Fix a crash when both expansion tooltip and progress animation were triggered</li>
+<li>Fix an annoyance with tooltip obscuring contextual menu in article list or folder list</li>
 </ul>
 
 
