--- a/notes.html
+++ b/notes.html
@@ -108,18 +108,11 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.7.2</h2>
+<h2 id="toc_1">3.7.3</h2>
 
 <ul>
-<li>Speed up database handling (the updated database remains fully compatible with all 3.x.x versions of Vienna)</li>
-<li>Remove preference setting related to notifications (already handled by System Preferences)</li>
-<li>Fix image overflow with certain feeds</li>
-<li>Fix download manager and replace NSURLDownload with NSURLSessionDownloadTask</li>
-<li>Fix scripts handling in menubar</li>
-<li>Fix behavior when clicking on Dock icon</li>
-<li>Improve handling of URLs containing semicolon character in the path component</li>
-<li>Update Sparkle to version 1.27 and add an EdDSA key</li>
-<li>Update procedures for building binaries (use Sourceforge for binaries instead of Bintray, fix notarization and Github test action)</li>
+<li>Fix copy of articles in article list</li>
+<li>Update Sparkle to version 1.27.1</li>
 </ul>
 
 
