--- a/notes.html
+++ b/notes.html
@@ -108,11 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.7.3</h2>
+<h2 id="toc_1">3.7.4</h2>
 
 <ul>
-<li>Fix copy of articles in article list</li>
-<li>Update Sparkle to version 1.27.1</li>
+<li>Fix unwanted changes of toolbar mode (switches to text+icon while the user requested text-only)</li>
+<li>Remove floodmagazine.com from default feed list and update other URLs</li>
+<li>Fix scripts building release binaries</li>
 </ul>
 
 
