--- a/notes.html
+++ b/notes.html
@@ -108,45 +108,32 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.8.0</h2>
+<h2 id="toc_1">3.8.1</h2>
 
 <h3 id="toc_2">! 3.8 versions require macOS 10.12 (Sierra) or later !</h3>
 
-<h3 id="toc_3">Changes since 3.7.3</h3>
+<h3 id="toc_3">Changes since 3.7.4</h3>
 
 <ul>
 <li>Implement an experimental new browser based on WKWebView : it can be selected in Advanced preferences, and will be available after application restart. It is faster and more secure.</li>
 <li>Remove support for web plug-ins (which were deprecated for a long time and unsecure)</li>
 <li>Add &quot;Actual Size&quot; menu command for resetting text zoom</li>
 <li>Add a disclosure triangle in feed credentials dialog, in order to provide additional feed details whenever it is needed to disambiguate the feed</li>
-<li>Add setting regarding trash emptying in preferences window</li>
+<li>Add a setting regarding emptying of trash in Preferences window</li>
 <li>Add a hidden preference for always displaying the full date, not using relative dates like Today or Yesterday. This is enabled with the Terminal command: <code>defaults write uk.co.opencommunity.vienna2 DoesRelativeDateFormatting -bool NO</code> and can be reversed with <code>defaults delete uk.co.opencommunity.vienna2 DoesRelativeDateFormatting</code></li>
-<li>Remove floodmagazine.com from default feed list and update other URLs</li>
 <li>Add Australian and British English as localization variants</li>
-<li>Fix unwanted changes of toolbar mode (prevent unrequested switches to text+icon while the user had requested text-only)</li>
 <li>Refactor and modernize many parts of code (modify ArticleController to be a NSViewController, restructurate code around new protocols, update AppleScript architecture, update logging tools, use NSSecureCoding, replace deprecated methods, rename some constants/methods…)</li>
 <li>Improve handling of URLs containing semicolon character in the path component</li>
 <li>Update build architecture</li>
-<li>Update Sparkle to version 2.2; use a new EdDSA key for updates whenever possible</li>
+<li>Update Sparkle to version 2.2.0; use a new EdDSA key for updates whenever possible</li>
 </ul>
 
-<h4 id="toc_4">Known issue : the experimental new browser does not yet handle file downloads</h4>
-
-<h3 id="toc_5">Changes since 3.8.0 Beta 3</h3>
+<h3 id="toc_4">Changes since 3.8.0</h3>
 
 <ul>
-<li>Add a disclosure triangle in feed credentials dialog, in order to provide additional feed details whenever it is needed to disambiguate the feed</li>
-<li>Remove &quot;Empty Trash…&quot; contextual menu command added in 3.8.0 Beta 3</li>
-<li>Fix a crash when trying to view a smart folder (problem introduced by 3.8.0 Beta 3)</li>
-<li>Fix toolbar&#39;s item validation problems when text-only mode is used on macOS 12</li>
-<li>Prevent white background from briefly appearing in article view while appearance is set to dark</li>
-<li>Optimize code, fix warnings</li>
-<li>Add a recommended ClangFormat configuration</li>
-<li>Update localizations</li>
-<li>Fix unwanted changes of toolbar mode (switches to text+icon while the user requested text-only)</li>
-<li>Remove floodmagazine.com from default feed list and update other URLs</li>
-<li>Update scripts building release binaries</li>
-<li>Update Sparkle to version 2.2</li>
+<li>Fix article view when &quot;Use Web Page for Articles&quot; option is enabled for a feed</li>
+<li>Fix link preview on legacy browser&#39;s article view</li>
+<li>Restore folder list width between app relaunches</li>
 </ul>
 
 
