--- a/notes.html
+++ b/notes.html
@@ -108,12 +108,10 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.7.4</h2>
+<h2 id="toc_1">3.7.5</h2>
 
 <ul>
-<li>Fix unwanted changes of toolbar mode (switches to text+icon while the user requested text-only)</li>
-<li>Remove floodmagazine.com from default feed list and update other URLs</li>
-<li>Fix scripts building release binaries</li>
+<li>Fix backtrack queue used for handling the &#39;Back&#39; / &#39;Forward&#39; commands on main tab</li>
 </ul>
 
 
