--- a/notes.html
+++ b/notes.html
@@ -108,14 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.8.2</h2>
+<h2 id="toc_1">3.8.3</h2>
 
 <ul>
-<li>Fix loading of styles when the application is launched from a folder with special characters in its path</li>
-<li>Fix &#39;Back&#39; / &#39;Forward&#39; commands on main tab (items activation and management of queue)</li>
-<li>Update Italian localization</li>
-<li>Update Sparkle to version 2.2.1</li>
-<li>Silence some warnings</li>
+<li>Fix &quot;Open Link in New Tab&quot; contextual menu item (on main tab when the new browser option is enabled)</li>
+<li>When the user uses the Space keyboard shortcut, keep the focus on the article list (as version 3.7.x did) to ease navigation with keyboard</li>
+<li>Fix a problem that could prevent decompression of the application on some configurations</li>
+<li>Improve various points of build process</li>
 </ul>
 
 
