--- a/notes.html
+++ b/notes.html
@@ -108,10 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.8.5</h2>
+<h2 id="toc_1">3.8.6</h2>
 
 <ul>
-<li>Fix &quot;Previous Tab / Next Tab&quot; menu commands to cycle between open tabs (did not work with new browser)</li>
+<li>Fix Command-W behavior according to tab count: closes window when only main tab is present</li>
+<li>Fix memory leak when closing tab with the new browser</li>
+<li>Fix toolbar search field to only start search when the user presses the enter key</li>
+<li>Fix status text in window&#39;s status bar</li>
 </ul>
 
 
