--- a/notes.html
+++ b/notes.html
@@ -108,7 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.8.6</h2>
+<h2 id="toc_1">3.8.7</h2>
+
+<ul>
+<li>Fix a long standing problem where OpenReader feeds read with another client would not be immediately synced in Vienna</li>
+</ul>
+
+<h2 id="toc_2">3.8.6</h2>
 
 <ul>
 <li>Fix Command-W behavior according to tab count: closes window when only main tab is present</li>
