--- a/Vienna Help/Resources/zh-Hans.lproj/keyboard.html
+++ b/Vienna Help/Resources/zh-Hans.lproj/keyboard.html
@@ -32,7 +32,7 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
   </tr>
   <tr>
     <td>h</td>
-    <td>Puts the focus on the search articles field.</td>
+    <td>Puts the focus on the search field.</td>
   </tr>
   <tr>
     <td>k</td>
