Correct localization of Helpbook title for french

--- a/Vienna Help/Resources/fr.lproj/Vienna.html
+++ b/Vienna Help/Resources/fr.lproj/Vienna.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content=
   "text/html; charset=utf-8" />
-  <meta name="AppleTitle" content="Aide Vienna" />
+  <meta name="AppleTitle" content="Vienna Help" />
   <link rel="stylesheet" href="../shared/helpstyle.css" media="all" />
   <title>Aide Vienna</title>
 </head>
