--- a/notes.html
+++ b/notes.html
@@ -108,19 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.8.7</h2>
+<h2 id="toc_1">3.8.8</h2>
 
 <ul>
-<li>Fix a long standing problem where OpenReader feeds read with another client would not be immediately synced in Vienna</li>
-</ul>
-
-<h2 id="toc_2">3.8.6</h2>
-
-<ul>
-<li>Fix Command-W behavior according to tab count: closes window when only main tab is present</li>
-<li>Fix memory leak when closing tab with the new browser</li>
-<li>Fix toolbar search field to only start search when the user presses the enter key</li>
-<li>Fix status text in window&#39;s status bar</li>
+<li>Fix access to list of keyboard shortcuts in helpbook on macOS Ventura</li>
+<li>Adapt helpbook pages to dark mode</li>
+<li>Improve information on OpenReader</li>
+<li>Revert Sparkle to version 2.2.2 as a precaution</li>
 </ul>
 
 
