--- a/Vienna Help/Resources/it.lproj/intro.html
+++ b/Vienna Help/Resources/it.lproj/intro.html
@@ -97,7 +97,7 @@
   trovare riferimenti alla serie di culto Firefly o al film tratto
   da essa.</p>
   <p>Se hai domande su Vienna o riscontri dei problemi, vai sul
-  <a href="http://forums.cocoaforge.com/viewforum.php?f=18">forum
+  <a href="https://github.com/ViennaRSS/vienna-rss/discussions">forum
   Support</a>.</p>
 </body>
 </html>
