--- a/Vienna Help/Resources/da.lproj/faq.html
+++ b/Vienna Help/Resources/da.lproj/faq.html
@@ -60,7 +60,7 @@ project. The source is provided under the
 license</a>.</p>
 <h2><a name="I_found_a_problem_with_Vienna._How_do_I_report_it">I found 
 a problem with Vienna. How do I report it?</a></h2>
-<p>Post a message over in the <a href="http://forums.cocoaforge.com/viewforum.php?f=18">
+<p>Post a message over in the <a href="https://github.com/ViennaRSS/vienna-rss/discussions">
 Support forum</a> and somebody will 
 investigate. Provide as much information about the problem as you can 
 including: the build of Vienna (obtained from the About Vienna panel), 
@@ -184,7 +184,7 @@ that you haven't read these articles and thus leaves them alone.</p>
 an enhancement in Vienna?</a></h2>
 
 <p>Post a message over at the
-<a href="http://forums.cocoaforge.com/viewforum.php?f=18">support forum</a>. All 
+<a href="https://github.com/ViennaRSS/vienna-rss/discussions">support forum</a>. All 
 requested enhancements are logged in the TODO file that is included with 
 the source code as a guidance for future developers.</p>
 </body>
