--- a/Vienna Help/Resources/pt-BR.lproj/faq.html
+++ b/Vienna Help/Resources/pt-BR.lproj/faq.html
@@ -51,7 +51,7 @@ the Vienna source code?</a></li>
 </ul>
 <h2><a name="I_found_a_problem_with_Vienna._How_do_I_report_it">I found 
 a problem with Vienna. How do I report it?</a></h2>
-<p>Post a message over in the <a href="http://forums.cocoaforge.com/viewforum.php?f=18">
+<p>Post a message over in the <a href="https://github.com/ViennaRSS/vienna-rss/discussions">
 Support forum</a> or in the <a href="https://github.com/ViennaRSS/vienna-rss/issues">issues list</a>
 and somebody will investigate. Provide as much information about the problem
 as you can can: the build of Vienna (obtained from the About Vienna panel),
