--- a/Vienna Help/Resources/pt.lproj/intro.html
+++ b/Vienna Help/Resources/pt.lproj/intro.html
@@ -65,7 +65,7 @@ styles at the <a href="http://www.vienna-rss.com/?page_id=76">Downloads</a> page
 other applications on your machine. Or experiment with smart folders to organise articles according to criteria based
 on the contents of each article. For example, you can easily set up a smart folder to group together all articles that
 mention "Joss Whedon" and "Firefly" to find references to the Firefly cult series or the spin-off movie.</p>
-<p>If you have any questions about Vienna or run into problems, send an email to <a href="mailto:vienna-rss-help@lists.sourceforge.net">Vienna Help</a> or head over to the <a href="http://forums.cocoaforge.com/viewforum.php?f=18">
+<p>If you have any questions about Vienna or run into problems, send an email to <a href="mailto:vienna-rss-help@lists.sourceforge.net">Vienna Help</a> or head over to the <a href="https://github.com/ViennaRSS/vienna-rss/discussions">
 Support forum</a>.</p>
 </body>
 </html>
