Fix broken links in help book

--- a/Vienna Help/Resources/cs.lproj/faq.html
+++ b/Vienna Help/Resources/cs.lproj/faq.html
@@ -84,7 +84,7 @@ scripts?</a></h2>
 <a href="http://www.apple.com/macosx/features/applescript/resources.html">
 Apple resource page</a> for more details.</p>
 <p>One way to get started is to download one of the existing scripts 
-from the <a href="http://www.vienna-rss.com/vienna_files.php">Vienna Downloads page</a> and view 
+from the <a href="https://www.vienna-rss.com/extras/">Vienna Downloads page</a> and view 
 it in the AppleScript editor.</p>
 
 <p>To submit your own script, send it to
