--- a/Vienna Help/Resources/de.lproj/faq.html
+++ b/Vienna Help/Resources/de.lproj/faq.html
@@ -7,6 +7,6 @@
 	<link rel="stylesheet" href="../shared/../shared/helpstyle.css" type="text/css"/>
 </head>
 <body>
-<p>Schauen Sie auf der <a href="http://www.vienna-rss.com/?page_id=96">offizelle Vienna Hilfe Seite</a> für die neusten Tipps und Tricks nach.</p>
+<p>Schauen Sie auf der <a href="https://www.vienna-rss.com/faq">offizelle Vienna Hilfe Seite</a> für die neusten Tipps und Tricks nach.</p>
 </body>
 </html>
