--- a/Vienna Help/Resources/fr.lproj/faq.html
+++ b/Vienna Help/Resources/fr.lproj/faq.html
@@ -238,7 +238,7 @@
   "How_do_I_create_my_own_styles">Comment créer mes propres styles
   ?</a></h2>
   <p>Voir la page <a href=
-  "http://www.vienna-rss.com/?page_id=65">Styles personnalisés</a>
+  "https://www.vienna-rss.com/extras/creating-custom-styles/">Styles personnalisés</a>
   pour les instructions.</p>
   <h2><a name="How_do_I_create_my_own_scripts" id=
   "How_do_I_create_my_own_scripts">Comment créer mes propres
