--- a/Vienna Help/Resources/nl.lproj/faq.html
+++ b/Vienna Help/Resources/nl.lproj/faq.html
@@ -12,7 +12,7 @@
   "" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik?</span>
   <p>Hier zijn een aantal vragen die naar voren kwamen tijdens de
   ontwikkeling van Vienna in de test-fase. Kijk hiervoor op
-  <a href="http://www.vienna-rss.com/?page_id=96">Official Vienna
+  <a href="https://www.vienna-rss.com/faq">Official Vienna
   FAQ Page</a> en de laatste hints en tips voor Vienna.</p>
   <ul>
     <li><a href="#Where_do_I_get_the_Vienna_source_code">Waar kan
@@ -81,7 +81,7 @@
   "How_do_I_create_my_own_styles">Hoe creëer ik mijn eigen
   stijlen?</a></h2>
   <p>Kijk op de <a href=
-  "http://www.vienna-rss.com/?page_id=65">Custom Styles page</a>
+  "https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a>
   voor instructies.</p>
   <h2><a name="How_do_I_create_my_own_scripts" id=
   "How_do_I_create_my_own_scripts">Hoe kan ik mijn eigen scripts
