--- a/Vienna Help/Resources/zh-Hans.lproj/faq.html
+++ b/Vienna Help/Resources/zh-Hans.lproj/faq.html
@@ -192,7 +192,7 @@ the age of articles to auto-expire, change the
 that you haven't read these articles and thus leaves them alone.</p>
 
 <h2><a name="How_do_I_create_my_own_styles">How do I create my own styles?</a></h2>
-<p>See the <a href="http://www.vienna-rss.com/?page_id=65">Custom Styles page</a> for
+<p>See the <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> for
 instructions.</p>
 
 <h2><a name="How_do_I_create_my_own_scripts">How do I create my own scripts?</a></h2>
